--- a/CheckYourEligibility-Parent/Views/Home/fsm_print_version.cshtml
+++ b/CheckYourEligibility-Parent/Views/Home/fsm_print_version.cshtml
@@ -12,7 +12,7 @@
     <section>
         <div class="govuk-grid-column-one-quarter">
             <a target="_self" tabindex="-1" aria-hidden="true" href="/documents/fsm_application.pdf">
-                <img alt="" class="" src="/images/fsm-form-thumbnail.png">
+                <img alt="Thumbnail of the free school meals application form" class="" src="/images/fsm-form-thumbnail.png">
             </a>
         </div>
         <div class="govuk-grid-column-three-quarters">
@@ -26,7 +26,6 @@
     </section>
 
 </div>
-
 
 <details class="govuk-details">
     <summary class="govuk-details__summary">
@@ -48,7 +47,7 @@
         <div class="govuk-grid-column-full">
             <h2 class="govuk-heading-m">What to do</h2>
 
-            <div class="govuk-warning-text">
+            <div class="govuk-warning-text" role="alert">
                 <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                 <strong class="govuk-warning-text__text">
                     <span class="govuk-visually-hidden">Warning</span>
@@ -65,7 +64,7 @@
             <br>
             <p><b>If you do not have access to a printer</b></p>
             <ol>
-                <li>Visit your childrens school and ask them to download the 'Free school meals claim form'.</li>
+                <li>Visit your children's school and ask them to download the 'Free school meals claim form'.</li>
                 <li>Complete the form with the school administrator if you need help.</li>
                 <li>A school administrator will process your claim form and contact you if you need to do anything else.</li>
                 <li>A school administrator will process your claim form and contact you.</li>
