--- a/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
@@ -1,11 +1,11 @@
 ﻿@using System.Globalization
-@model CheckYourEligibility_FrontEnd.Models.FsmApplication;
+@model CheckYourEligibility_FrontEnd.Models.FsmApplication
 
 @{
     ViewData["Title"] = "Check Answers";
     ViewData["ServiceName"] = "Check a family's eligibility";
 
-    DateTime parentDOB = DateTime.ParseExact(Model.ParentDateOfBirth, "yyyy-MM-dd" ,CultureInfo.InvariantCulture);
+    DateTime parentDOB = DateTime.ParseExact(Model.ParentDateOfBirth, "yyyy-MM-dd", CultureInfo.InvariantCulture);
     string formattedParentDOB = parentDOB.ToString("dd/MM/yyyy");
 }
 
@@ -18,118 +18,74 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-        <h1 class="govuk-heading-l">Check your answers before registering</h1>
+        <h1 class="govuk-heading-l" tabindex="-1">Check your answers before registering</h1>
 
-        <div class="govuk-summary-card">
+        <div class="govuk-summary-card" aria-labelledby="parent-details-title">
             <div class="govuk-summary-card__title-wrapper">
-                <h2 class="govuk-summary-card__title">
+                <h2 id="parent-details-title" class="govuk-summary-card__title">
                     Parent or guardian details
                 </h2>
-
             </div>
             <div class="govuk-summary-card__content">
                 <dl class="govuk-summary-list">
-
                     <div class="govuk-summary-list__row">
-                        <dt class="govuk-summary-list__key">
-                            Parent or guardian name
-                        </dt>
-                        <dd class="govuk-summary-list__value">
-                            @Model.ParentFirstName @Model.ParentLastName
-                        </dd>
-
+                        <dt class="govuk-summary-list__key">Parent or guardian name</dt>
+                        <dd class="govuk-summary-list__value">@Model.ParentFirstName @Model.ParentLastName</dd>
                     </div>
                     <div class="govuk-summary-list__row">
-                        <dt class="govuk-summary-list__key">
-                            Parent or guardian date of birth
-                        </dt>
-                        <dd class="govuk-summary-list__value">
-                            @formattedParentDOB
-                        </dd>
-
+                        <dt class="govuk-summary-list__key">Parent or guardian date of birth</dt>
+                        <dd class="govuk-summary-list__value">@formattedParentDOB</dd>
                     </div>
 
                     @if (Model.ParentNino == null)
                     {
                         <div class="govuk-summary-list__row">
-                            <dt class="govuk-summary-list__key">
-                                Asylum support reference number
-                            </dt>
-                            <dd class="govuk-summary-list__value">
-                                @Model.ParentNass
-                            </dd>
-
+                            <dt class="govuk-summary-list__key">Asylum support reference number</dt>
+                            <dd class="govuk-summary-list__value">@Model.ParentNass</dd>
                         </div>
                     }
                     else
                     {
                         <div class="govuk-summary-list__row">
-                            <dt class="govuk-summary-list__key">
-                                National insurance number
-                            </dt>
-                            <dd class="govuk-summary-list__value">
-                                @Model.ParentNino
-                            </dd>
-
+                            <dt class="govuk-summary-list__key">National insurance number</dt>
+                            <dd class="govuk-summary-list__value">@Model.ParentNino</dd>
                         </div>
                     }
 
                     <div class="govuk-summary-list__row">
-                        <dt class="govuk-summary-list__key">
-                            Email address
-                        </dt>
-                        <dd class="govuk-summary-list__value">
-                            @Model.Email
-                        </dd>
-
+                        <dt class="govuk-summary-list__key">Email address</dt>
+                        <dd class="govuk-summary-list__value">@Model.Email</dd>
                     </div>
                 </dl>
             </div>
         </div>
 
-        <!-- iterate child list and display data -->
+        <!-- Iterate child list and display data -->
         @for (var i = 0; i < Model.Children.ChildList.Count; i++)
         {
-            <div class="govuk-summary-card">
+            <div class="govuk-summary-card" aria-labelledby="child-@i-title">
                 <div class="govuk-summary-card__title-wrapper">
-                    <h2 class="govuk-summary-card__title">
+                    <h2 id="child-@i-title" class="govuk-summary-card__title">
                         Child @(@i + 1)
                     </h2>
                     <ul class="govuk-summary-card__actions">
                         <li class="govuk-summary-card__action">
-                            @Html.ActionLink("Change", "ChangeChildDetails")
+                            @Html.ActionLink("Change", "ChangeChildDetails", new { index = i }, new { @class = "govuk-link" })
                         </li>
-
                     </ul>
                 </div>
-
                 <div class="govuk-summary-card__content">
                     <dl class="govuk-summary-list">
                         <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">Child's name</dt>
+                            <dd class="govuk-summary-list__value">@Model.Children.ChildList[i].FirstName @Model.Children.ChildList[i].LastName</dd>
                         </div>
                         <div class="govuk-summary-list__row">
-                            <dt class="govuk-summary-list__key">
-                                Child's name
-                            </dt>
-                            <dd class="govuk-summary-list__value">
-                                @Model.Children.ChildList[i].FirstName @Model.Children.ChildList[i].LastName
-                            </dd>
-
+                            <dt class="govuk-summary-list__key">School</dt>
+                            <dd class="govuk-summary-list__value">@Model.Children.ChildList[i].School.Name</dd>
                         </div>
                         <div class="govuk-summary-list__row">
-                            <dt class="govuk-summary-list__key">
-                                School
-                            </dt>
-                            <dd class="govuk-summary-list__value">
-                                @Model.Children.ChildList[i].School.Name
-                            </dd>
-
-                        </div>
-
-                        <div class="govuk-summary-list__row">
-                            <dt class="govuk-summary-list__key">
-                                Child's date of birth
-                            </dt>
+                            <dt class="govuk-summary-list__key">Child's date of birth</dt>
                             <dd class="govuk-summary-list__value">
                                 @(new DateOnly((int)Model.Children.ChildList[i].Year, (int)Model.Children.ChildList[i].Month, (int)Model.Children.ChildList[i].Day).ToString("dd/MM/yyyy"))
                             </dd>
@@ -142,9 +98,9 @@
         <h2 class="govuk-heading-m">Confirm details and send to the school</h2>
 
         <p class="govuk-body">By sending this information on to the school you confirm that, to the best of your knowledge, it is correct.</p>
-        <p>Your details are only used to register and will not be stored.</p>
+        <p class="govuk-body">Your details are only used to register and will not be stored.</p>
 
-        <form asp-action="Check_Answers" asp-controller="Check" method="post" novalidate="">
+        <form asp-action="Check_Answers" asp-controller="Check" method="post" novalidate>
             <!-- Parent Details -->
             <input type="hidden" asp-for="ParentFirstName" value="@Model.ParentFirstName" />
             <input type="hidden" asp-for="ParentLastName" value="@Model.ParentLastName" />
