--- a/CheckYourEligibility-Admin/Views/Application/Search.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/Search.cshtml
@@ -95,7 +95,7 @@
                                     <option value="EvidenceNeeded">Evidence needed</option>
 
 
-                                    <option value="sentForReview">Sent for review</option>
+                                    <option value="SentForReview">Sent for review</option>
                                       
                                     <option value="ReviewEntitled">Reviewed entitled</option>
 
