--- a/CheckYourEligibility-Admin/Views/Application/Search.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/Search.cshtml
@@ -44,7 +44,7 @@
                                 Parent or guardian last name
                             </h6>
                             <div class="autocomplete">
-                                <input id="ParentLastName" class="countryAutocomplete govuk-input" type="text" name="ParentLastName" value="" placeholder="Status">
+                                <input id="ParentLastName" class="countryAutocomplete govuk-input" type="text" name="ParentLastName" value="" placeholder="Parent last name">
                             </div>
 
                         </div>
