--- a/CheckYourEligibility-Parent/Views/Check/Loader.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Loader.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Checking Loader";
     ViewData["ServiceName"] = "Check a family's eligibility";
+    ViewData["Noscript"] = "<meta http-equiv=\"refresh\" content=\"5;url=" + Url.Action("Poll_Status", "Check") + "\" />";
 }
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
