added check security, 404 and email

--- a/CheckYourEligibility-Admin/Views/Application/ApplicationDetailAppeal.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApplicationDetailAppeal.cshtml
@@ -214,7 +214,7 @@
                         Email address
                     </dt>
                     <dd class="govuk-summary-list__value">
-                        TBC
+                        @Model.Data.User.Email
                     </dd>
 
                 </div>
