Placing all noscript meta tag within Loader.cshtml

--- a/CheckYourEligibility-Parent/Views/Check/Loader.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Loader.cshtml
@@ -1,7 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Checking Loader";
     ViewData["ServiceName"] = "Check a family's eligibility";
-    ViewData["Noscript"] = "<meta http-equiv=\"refresh\" content=\"5;url=" + Url.Action("Poll_Status", "Check") + "\" />";
 }
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
@@ -19,6 +18,10 @@
         </div>
     </div>
 </div>
+
+<noscript>
+    <meta http-equiv="refresh" content="5;url=@Url.Action("Poll_Status", "Check")"/>
+</noscript>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript">
