--- a/CheckYourEligibility-Admin/Views/Application/Process_Appeals.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/Process_Appeals.cshtml
@@ -46,7 +46,7 @@
                 <div class="govuk-grid-column-full">
                     <h2 class="govuk-heading-m">How to process appeals</h2>
                     <ol class="govuk-list govuk-list--number">
-                        <li>For each record with the status 'Evidence needed', ask the parent or guardian for supporting evidence. <a href="../checker/evidence-guidance.html" class="govuk-link">See a full list of acceptable documents.</a></li>
+                        <li>For each record with the status 'Evidence needed', ask the parent or guardian for supporting evidence. @Html.ActionLink("See a full list of acceptable documents.", "EvidenceGuidance", "application", null, new { @class = "govuk-link" })</li>
                         <li>Once you have this, go into the record by selecting the reference number, and follow the instructions there.</li>
                     </ol>
                 </div>
