--- a/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
@@ -139,4 +139,5 @@
     </button>
 </form>
 
+<style> #conditional-ni-number{display: block;}</style>
 <script src="/js/validationSummary.js"></script>
