corrected appeals flow, removed global exception handler

--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
@@ -24,7 +24,7 @@
 
 <div class="govuk-!-padding-bottom-3"></div>
 
-<form action="Enter_Child_Details" method="post" novalidate>
+<form action="Enter_Child_Details" method="get" novalidate>
     <button class="govuk-button govuk-!-margin-top-5" data-module="govuk-button">
         Appeal now
     </button>
