added reference attribute, updated response message, and dict in results.cshtml

--- a/CheckYourEligibility-Admin/Views/Application/Search.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/Search.cshtml
@@ -74,7 +74,9 @@
                             <h6 class="govuk-heading-xxs HO-uk-margin-bottom-1">
                                 Reference number
                             </h6>
-
+                                <p class="govuk-error-message">
+                                    <span asp-validation-for="Reference"></span>
+                                </p>
                             <input id="Reference" class="govuk-input" type="text" name="Reference" value="" placeholder="Reference number">
 
                         </div>
