--- a/CheckYourEligibility-Admin/Views/Application/Process_Appeals.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/Process_Appeals.cshtml
@@ -4,7 +4,7 @@
     {
         {"Entitled", "govuk-tag--green"},
         {"EvidenceNeeded", "govuk-tag--light-blue"},
-        {"ReceivingEntitlement", "govuk-tag--pink"},
+        {"Receiving", "govuk-tag--pink"},
         {"SentForReview", "govuk--tag-blue"},
         {"ReviewedEntitled", "govuk--tag-green"},
         {"ReviewedNotEntitled", "govuk--tag-red"}
@@ -14,7 +14,7 @@
     {
         {"Entitled", "Entitled"},
         {"EvidenceNeeded", "Evidence Needed"},
-        {"ReceivingEntitlement", "Receiving"},
+        {"Receiving", "Receiving Entitlement"},
         {"SentForReview", "Sent for Review"},
         {"ReviewedEntitled", "Reviewed Entitled"},
         {"ReviewedNotEntitled", "Reviewed Not Entitled"}
