--- a/CheckYourEligibility-Admin/Views/Application/ApplicationDetailAppeal.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApplicationDetailAppeal.cshtml
@@ -6,7 +6,7 @@
     {
         {"Entitled", "govuk-tag--green"},
         {"EvidenceNeeded", "govuk-tag--light-blue"},
-        {"ReceivingEntitlement", "govuk-tag--pink"},
+        {"Receiving", "govuk-tag--pink"},
         {"SentForReview", "govuk--tag-blue"},
         {"ReviewedEntitled", "govuk--tag-green"},
         {"ReviewedNotEntitled", "govuk--tag-red"}
@@ -16,7 +16,7 @@
     {
         {"Entitled", "Entitled"},
         {"EvidenceNeeded", "Evidence Needed"},
-        {"ReceivingEntitlement", "Receiving"},
+        {"Receiving", "Receiving Entitlement"},
         {"SentForReview", "Sent for Review"},
         {"ReviewedEntitled", "Reviewed Entitled"},
         {"ReviewedNotEntitled", "Reviewed Not Entitled"}
