--- a/CheckYourEligibility-Admin/Views/Application/Results.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/Results.cshtml
@@ -5,7 +5,7 @@
     {
         {"Entitled", "govuk-tag--green"},
         {"EvidenceNeeded", "govuk-tag--light-blue"},
-        {"ReceivingEntitlement", "govuk-tag--pink"},
+        {"Receiving", "govuk-tag--pink"},
         {"SentForReview", "govuk--tag-blue"},
         {"ReviewedEntitled", "govuk--tag-green"},
         {"ReviewedNotEntitled", "govuk--tag-red"}
@@ -15,10 +15,11 @@
     {
         {"Entitled", "Entitled"},
         {"EvidenceNeeded", "Evidence Needed"},
-        {"ReceivingEntitlement", "Receiving"},
+        {"Receiving", "Receiving Entitlement"},
         {"SentForReview", "Sent for Review"},
         {"ReviewedEntitled", "Reviewed Entitled"},
         {"ReviewedNotEntitled", "Reviewed Not Entitled"}
+
     };
 
 }
