--- a/CheckYourEligibility-Admin/Views/Home/Index.cshtml
+++ b/CheckYourEligibility-Admin/Views/Home/Index.cshtml
@@ -47,7 +47,7 @@
                     <div class="dfe-card-container">
                         <div class="def-card">
                             <h2 class="govuk-heading-m">
-                                <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="applications">Finalise applications</a>
+                                    <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="@Url.Action("FinaliseApplications", "Application")">Finalise applications</a>
                             </h2>
                             <p>Finalise applications for free school meals.</p>
                         </div>
